--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
                     </span></p> -->
             </div>
             <div class="absolute bottom-[80px] left-[50%] translate-x-[-50%] flex flex-col md:flex-row">
-                <button class="uppercase bg-gray-800 w-96 text-white rounded-full h-10">shop now</button>
+                <button class="uppercase bg-gray-800 w-96 text-black rounded-full h-10">shop now</button>
                 <!-- <button
                     class="mt-2 uppercase bg-slate-200 w-96 text-gray-900 rounded-full h-10 md:mt-0 md:ml-6">existing
                     inventory</button> -->
